WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79286
Fix Object.freeze for non-final objects.
https://bugs.webkit.org/show_bug.cgi?id=79286
Summary
Fix Object.freeze for non-final objects.
Gavin Barraclough
Reported
2012-02-22 15:32:07 PST
For vanilla objects we implement this with a single transition, for objects with special properties we should just follow the spec defined algorithm.
Attachments
Fix
(13.32 KB, patch)
2012-02-22 15:35 PST
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-02-22 15:35:18 PST
Created
attachment 128306
[details]
Fix
Gavin Barraclough
Comment 2
2012-02-22 15:47:32 PST
Fixed in
r108568
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug